feat: add more panel pages & connector middleware

--- a/panel/panel-frontend/src/assets/main.less
+++ b/panel/panel-frontend/src/assets/main.less
@@ -6,7 +6,7 @@ body {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: black;
+    background-color: #101014;
     color: white;
   }
 }
